init fix for comparison box being way too big, adding in simple tooltips

--- a/comparison.css
+++ b/comparison.css
@@ -24,6 +24,7 @@ label {
 
 #tooltip {
   background: white;
+
   /* margin: 10px; */
   /* padding: 10px; */
 }
@@ -33,4 +34,5 @@ label {
   display: flex;
   flex-direction: column;
   width: fit-content;
+  height: fit-content;
 }
